static/index.css
body {
  background-color: #ffe48ac7;
  color: #000000;
  font-family: "Luminari", "Georgia", serif;
  line-height: 1.7;
  margin: 0;
  padding: 20px;
  max-width: 800px;
  margin-left: auto;
  margin-right: auto;
}

b {
  font-weight: 900;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  text-align: center;
  color: #000000;
  margin-top: 24px;
  margin-bottom: 16px;
}

h1 {
  font-size: 3em;
}

h2 {
  font-size: 2em;
}

h3 {
  font-size: 1.5em;
}

h4,
h5,
h6 {
  font-size: 1em;
}

a {
  color: #000000;
  text-decoration: none;
}

a:hover {
  color: #fa1919;
  border-color: #fa1919;
}

ul,
ol {
  padding-left: 30px;
}

code {
  background-color: #3c3c42;
  border-radius: 6px;
  color: #e9c46a;
  padding: 0.4em 0.6em;
  font-family: "Courier New", monospace;
}

pre code {
  padding: 0;
}

pre {
  background-color: #3c3c42;
  border-radius: 6px;
  padding: 1em;
  overflow: auto;
  box-shadow: 2px 2px 6px #000;
}

blockquote {
  padding-left: 1em;
  margin-left: 0;
  padding-top: 0.5em;
  padding-bottom: 0.5em;
  padding-right: 0.5em;
  color: #000000;
  font-family: "Times New Roman", Times, serif;
}

img {
  max-width: 100%;
  height: auto;
  border-radius: 6px;
  border: 3px solid #3c3c42;
  box-shadow: 3px 3px 6px #000;
}

::-webkit-scrollbar {
  width: 12px;
  height: 12px;
}

::-webkit-scrollbar-track {
  background: #1f1c25;
  border-radius: 6px;
}

::-webkit-scrollbar-thumb {
  background-color: #3c3c42;
  border-radius: 6px;
  border: 3px solid #1f1c25;
}

::-webkit-scrollbar-thumb:hover {
  background-color: #5a5466;
}

* {
  scrollbar-width: thin;
  scrollbar-color: #3c3c42 #1f1c25;
}

::-webkit-scrollbar-corner {
  background: #1f1c25;
}

